shared-cluster-demos/staticsite/kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staticsite-ing
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  tls:
    - hosts:
        - static-demo.dev.cloud.org.gc.ca
  rules:
  - host: static-demo.dev.cloud.org.gc.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staticsite-svc
            port:
              number: 80
  ingressClassName: nginx
